<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>at.iamsoccer.bukkit.plugin</groupId>
	<artifactId>soccerisawesome</artifactId>
	<version>1.3.0-Rename-Beta</version>
	<name>SHIA</name>
	<description>A Bulk Plugin for HearthCraft</description>

    <packaging>jar</packaging>

	<properties>
		<project.mainClass>${project.name}Plugin</project.mainClass>
		<project.shortName>${project.name}</project.shortName>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>21</java.version>
	</properties>

	<build>
		<finalName>${project.name}-${project.version}</finalName>

		<sourceDirectory>src</sourceDirectory>

		<defaultGoal>clean install</defaultGoal>

		<resources>
			<!-- Static resources -->
			<resource>
				<directory>${project.basedir}/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.yml</include>
					<include>**/*.txt</include>
				</includes>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/**</exclude>
									</excludes>
								</filter>
							</filters>
							<dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
							<relocations>
								<relocation>
									<pattern>co.aikar.commands</pattern>
									<shadedPattern>${project.groupId}.${project.artifactId}.acf</shadedPattern>
								</relocation>
								<relocation>
									<pattern>co.aikar.locales</pattern>
									<shadedPattern>${project.groupId}.${project.artifactId}.locales</shadedPattern>
								</relocation>
							</relocations>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>


	<repositories>
		<repository>
			<id>papermc</id> <!-- paper-api -->
			<url>https://repo.papermc.io/repository/maven-public/</url>
		</repository>
		<repository> <!-- acf-paper -->
			<id>aikar</id>
			<url>https://repo.aikar.co/content/groups/aikar/</url>
		</repository>
		<repository>
			<id>essentials-releases</id>
			<url>https://repo.essentialsx.net/releases/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>20.1.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>io.papermc.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>1.21.10-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>co.aikar</groupId>
			<artifactId>acf-paper</artifactId>
			<version>0.5.1-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>net.luckperms</groupId>
			<artifactId>api</artifactId>
			<version>5.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.essentialsx</groupId>
			<artifactId>EssentialsX</artifactId>
			<version>2.20.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>at.hugob.plugin.library</groupId>
			<artifactId>config</artifactId>
			<version>1.2.9</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>at.hugob</groupId>
			<artifactId>annotations</artifactId>
			<version>0.0.1</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>
